2007-11-01 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/sources/google_translate.rb: Rescue URI::InvalidURIError.

2007-10-31 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/ui/main_app.rb: Fixed two typos.

2007-10-31 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/ui/main_app.rb: Keep above option in the "View menu".
    Feature request by by Dmitry Rutsky (Debian bug #442340).
    * data/fantasdic/ui/menus.xml: Ditto.

2007-10-28 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/sources/edict_file.rb: Fixed bug with gzip-compressed files
    that are encoded in EUC-JP.

2007-10-28 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/sources/edict_file.rb: Fixed typo.

2007-10-27 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/ui/utils.rb: Code to do GUI stuff inside Ruby threads
    safely. Loosely based on booh, by Guillaume Cottenceau.
    * lib/fantasdic/ui/main_app.rb: Uses the above.
    * lib/fantasdic/ui/add_dictionary_dialog.rb: Uses the above.

2007-10-27 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/sources/edict_file.rb: Tries to open the file to ensure it
    exists (egrep implementation).

2007-10-27 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/sources/edict_file.rb: Added a pure-ruby implementation. It
    shares as much code as possible with the egrep implementation. FIXME: Find a
    way to look up words in EUC-JP with reasonable performance in the pure
    Ruby implementation... Search in EUC-JP-encoded files disabled for now in
    this implementation.

2007-10-27 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/source_base.rb: Added convert_utf8_to(dest_enc, str) helper
    method.

2007-10-27 Mathieu Blondel <mblondel@svn.gnome.org>

    * README: Update projects metadata, since Fantasdic now supports multiple
    dictionary sources.
    * fantasdic.desktop: Ditto.
    * lib/fantasdic.rb: Ditto.
